# lua-pango

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: FindPango.cmake  FindPangocairo.cmake
common/: CMakeLists.txt  common.c  common.h  pango_common.c  pango_common.h
example/: hello.lua
pangocairo/: CMakeLists.txt
pangocairo/src/: pangocairo.c
src/: context.c  context.h  font.c  font.h  font_desc.c  font_desc.h  font_face.c  font_face.h  font_face_array.c  font_face_array.h  font_family.c  font_family.h  font_family_array.c  font_family_array.h  font_map.c  font_map.h  font_metrics.c  font_metrics.h  font_set.c  font_set.h  glyph_item.c  glyph_item.h  glyph_string.c  glyph_string.h  item.c  item.h  layout.c  layout.h  lua_pango.h  matrix.c  matrix.h  pango.c  pangocairo.c  pangocairo.h
swig/: hello.lua  names_pango.lua  pango.lua  pango.sh  pango_font.lua  pango_layout.lua  pangocairo.lua  pangocairo.sh  swig_pango.i  swig_pangocairo.i
